config/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-basic-auth
spec:
  basicAuth:
    secret: authsecret
