config/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-nginx-prod
spec:
  selector:
    matchLabels:
      app: welcome-nginx-prod
  replicas: 1
  template:
    metadata:
      labels:
        app: welcome-nginx-prod
    spec:
      containers:
        - image: schniebel/welcome-page:{TAG}
          name: welcome-nginx-prod
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
       - name: regcred
