config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-nginx
spec:
  selector:
    matchLabels:
      app: welcome-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: welcome-nginx
    spec:
      containers:
        - image: schniebel/welcome-page
          name: {TAG}
          imagePullPolicy: Always
      imagePullSecrets:
       - name: regcred
