config/grafana-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: monitoring
spec:
  routes:
  - kind: Rule
    match: Host(`monitoring.ryanschnabel.io`)
    services:
    - kind: Service
      name: grafana
      port: 3000
  - kind: Rule
    match: Host(`alerts.ryanschnabel.io`)
    services:
    - kind: Service
      name: alertmanager-main
      port: 9093
  tls:
    secretName: ryanschnabel-io-tls
    domains:
    - main: ryanschnabel.io
      sans:
      - monitoring.ryanschnabel.io
