config/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-nginx
spec:
  selector:
    matchLabels:
      app: welcome-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: welcome-nginx
    spec:
      containers:
        - image: schniebel/welcome-page
          name: welcome-nginx
          imagePullPolicy: Always
      imagePullSecrets:
       - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: welcome-nginx-svc
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: welcome-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "ryanschnabel.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome-nginx-svc
            port:
              number: 80
  tls:
  - hosts:
      - ryanschnabel.io
    secretName: ryanschnabel-io-tls

---

apiVersion: v1
kind: Service
metadata:
  name: traefik-nodeport
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - name: traefik
      port: 80
      nodePort: 30182
      targetPort: 80
  selector:
    app: traefik
