config/monitoring-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-ingressroute
  namespace: monitoring
spec:
  routes:
  - kind: Rule
    match: Host(`monitoring.ryanschnabel.com`)
    services:
    - kind: Service
      name: grafana
      port: 3000
  - kind: Rule
    match: Host(`alerts.ryanschnabel.com`)
    middlewares:
      - name: nginx-basic-auth-monitoring
    services:
    - kind: Service
      name: alertmanager-main
      port: 9093
  - kind: Rule
    match: Host(`prometheus.ryanschnabel.com`)
    middlewares:
      - name: nginx-basic-auth-monitoring
    services:
    - kind: Service
      name: prometheus-operator
      port: 8443
  - kind: Rule
    match: Host(`blackbox.ryanschnabel.com`)
    middlewares:
      - name: nginx-basic-auth-monitoring
    services:
    - kind: Service
      name: blackbox-exporter
      port: 9115
  tls:
    secretName: ryanschnabel-com-production-tls
