config/service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "ryanschnabel.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome-nginx-svc
            port:
              number: 80
  - host: "test.ryanschnabel.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome-nginx-svc
            port:
              number: 80
  tls:
  - hosts:
      - ryanschnabel.io
    secretName: ryanschnabel-io-tls

---

apiVersion: v1
kind: Service
metadata:
  name: traefik-nodeport
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - name: traefik
      port: 80
      nodePort: 30182
      targetPort: 80
  selector:
    app: traefik
